[gd_scene load_steps=14 format=3 uid="uid://qiskds5qmtxe"]

[ext_resource type="Script" path="res://shop_phase/reveal/reveal_panel.gd" id="1_obbn5"]
[ext_resource type="Texture2D" uid="uid://b501r2dqmxy1m" path="res://shop_phase/reveal/reveal_base.svg" id="2_vm3ct"]
[ext_resource type="Texture2D" uid="uid://c8ykfomnwvygf" path="res://shop_phase/reveal/reveal_title.svg" id="3_00mh3"]
[ext_resource type="FontFile" uid="uid://cbxuvuh46x4co" path="res://ZeroCool.ttf" id="4_xky22"]
[ext_resource type="PackedScene" uid="uid://daid81smvt7vy" path="res://ui/ok/butt_ok.tscn" id="5_fox4g"]
[ext_resource type="PackedScene" uid="uid://ug72pfmoc1uy" path="res://shop_phase/inventario_vertical/inventory_artifact_box.tscn" id="6_776fo"]
[ext_resource type="Texture2D" uid="uid://2k8nvaxx3ul" path="res://shop_phase/reveal/addinv_normal.png" id="7_q8v6l"]
[ext_resource type="Texture2D" uid="uid://5wa5jh1mjnff" path="res://shop_phase/reveal/addinv_click.png" id="8_ktfqd"]
[ext_resource type="Texture2D" uid="uid://biddxh3v54bh3" path="res://shop_phase/reveal/addinv_hover.png" id="9_iksbh"]

[sub_resource type="Animation" id="Animation_aouha"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_ub21r"]
resource_name = "close_reveal"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.6),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}

[sub_resource type="Animation" id="Animation_q4gdg"]
resource_name = "open_reveal"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qq44p"]
_data = {
"RESET": SubResource("Animation_aouha"),
"close_reveal": SubResource("Animation_ub21r"),
"open_reveal": SubResource("Animation_q4gdg")
}

[node name="RevealPanel" type="Control" node_paths=PackedStringArray("group_empty", "group_success", "transition", "nameplate", "box")]
layout_mode = 3
anchor_right = 0.366
anchor_bottom = 0.61
offset_right = -0.400024
offset_bottom = -0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_obbn5")
group_empty = NodePath("Empty")
group_success = NodePath("Success")
transition = NodePath("AnimationPlayer")
nameplate = NodePath("Success/ArtifactName")
box = NodePath("Success/InventoryArtifactBox")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_qq44p")
}

[node name="BG" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_vm3ct")
expand_mode = 1

[node name="PanelTitle" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.175
texture = ExtResource("3_00mh3")
expand_mode = 1

[node name="TitleLabel" type="Label" parent="PanelTitle"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.289
anchor_right = 0.693
anchor_bottom = 0.741
offset_left = 0.0319977
offset_top = 7.0
offset_right = 0.18399
offset_bottom = 0.00799561
theme_override_colors/font_color = Color(0.67451, 0.364706, 0.176471, 1)
theme_override_colors/font_shadow_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("4_xky22")
theme_override_font_sizes/font_size = 28
text = "¿QUÉ HABÍA?"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Empty" type="Control" parent="."]
visible = false
anchors_preset = 0

[node name="FailedLabel" type="Label" parent="Empty"]
layout_mode = 0
offset_left = 56.0
offset_top = 147.0
offset_right = 457.0
offset_bottom = 444.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_xky22")
theme_override_font_sizes/font_size = 30
text = "VAYA... 
NO HABÍA NADA EN LA CAJA"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ButtOK" parent="Empty" instance=ExtResource("5_fox4g")]
layout_mode = 0
offset_left = 150.0
offset_top = 554.0
offset_right = 359.0
offset_bottom = 651.0

[node name="Success" type="Control" parent="."]
visible = false
anchors_preset = 0

[node name="ArtifactName" type="Label" parent="Success"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.019
anchor_bottom = 0.011
offset_left = 76.0
offset_top = 100.0
offset_right = 436.0
offset_bottom = 220.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("4_xky22")
theme_override_font_sizes/font_size = 30
text = "NOMBRE NORMAL A NO SER QUE SEA MUY LARGO"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="InventoryArtifactBox" parent="Success" instance=ExtResource("6_776fo")]
layout_mode = 0
offset_left = 141.0
offset_top = 241.0
offset_right = 371.0
offset_bottom = 471.0

[node name="ButtAddInv" type="TextureButton" parent="Success"]
layout_mode = 0
offset_left = 150.0
offset_top = 553.0
offset_right = 359.0
offset_bottom = 650.0
texture_normal = ExtResource("7_q8v6l")
texture_pressed = ExtResource("8_ktfqd")
texture_hover = ExtResource("9_iksbh")
ignore_texture_size = true
stretch_mode = 0

[connection signal="pressed" from="Empty/ButtOK" to="." method="close_panel"]
[connection signal="pressed" from="Success/ButtAddInv" to="." method="close_panel"]
